--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "mock-server-app",
   "version": "1.0.0",
-  "description": "mock server app",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js" 
+    
+   
+    "start": "node server.js"
   },
   "keywords": [],
-  "author": "abdul",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.1"
   }
 }
